refactor. app 모듈 분리